tests/snapshots/walker__walker_remove_input@flat_nested_flat_poetry2nix_nixpkgs.snap
---
source: tests/walker.rs
expression: result.to_string()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: poetry2nix.nixpkgs
---
{
  description = "flat nested flat test";

  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
  inputs.flake-utils.url = "github:numtide/flake-utils/master";
  inputs.poetry2nix = {
    inputs.flake-utils.follows = "flake-utils";
    url = "github:nix-community/poetry2nix/master";
  };

  outputs =
    {
      self,
      nixpkgs,
      flake-utils,
      poetry2nix,
    }:
    { };
}
